2109 [XviD] fixed saving of custom vbv values. Bug #3483985
2108 [AutoEncode] + [OneClick] fixed saving of custom file size values
     [File Size Selector] removed some default values
                          added a control in the settings to modify custom file size values
                          all other controls will not save anymore custom values
2107 [Job] delete intermediate files also during job deletion if specified in the settings

Changelog 2050 --> 2106

Features:
[Audio Encoder] added handling of channel count mismatch
[Audio Encoder] cosmetics
[Audio Encoder] do not abort downmix anymore if input avs file has no channel position information
[Audio Encoder] DTS-MA decoding is blocked with NicAudio to avoid problems
[Audio Encoder] show the opening of files in the job progress window as FFAudioSource may need some time to index files
[AVS Script Creator] + [OneClick] improve input DAR detection
[AVS Script Creator] enhanced selection box if opening an indexable file directly
[AVS Script Creator] resize value will only be added to the script if necessary
[Bitrate Calculator] improved M2TS calculation assumption. Warning: it is better but also not correct
[D2V Indexer] .bad and .fix.txt files will also be deleted in cleanup step
[HD Streams Extractor] automatically execute the job a second time if a gaps file is detected
[HD Streams Extractor] defaulting to English if the track language cannot be indentified (MKV only)
[M2TS muxer] added some missing audio types
[MainForm] MeGUI can only be closed if there are no running jobs
[MainForm] offer to install AviSynth if AviSynth is not found but the installer is available (x86 only)
[MediaInfo] added default/forced track info to the MediaInfo wrapper (requires mediainfo revision 0.7.51+)
[MediaInfo] added StreamOrder to the MediaInfo wrapper (requires mediainfo revision 0.7.53+)
[MKV Demuxer] adjusted demuxer to the recent mkvextract changes (requires mkvmerge revision 5.2.1+)